[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scenes/Menu/login_screen.gd" id="1"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 80.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pokemon Game"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter Username:"

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Your username..."
max_length = 20

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login / Register"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = " "
horizontal_alignment = 1